# spmvs

./: .gitmodules  README.md
kokkos-kernels/: CMakeLists.txt  base.hpp  kk_bsr_spmv_base_fp16_fp16.cpp  kk_bsr_spmv_cusparse_fp16_fp16.cpp  kk_bsr_spmv_cusparse_fp64_fp64.cpp  kk_bsr_spmv_native_fp16_fp16.cpp  kk_bsr_spmv_native_fp64_fp64.cpp  kk_bsr_spmv_tc_fp16_fp16.cpp  kk_bsr_spmv_tc_fp64_fp64.cpp  kk_crs_spmv_base_fp16_fp16.cpp  kk_crs_spmv_cusparse_fp16_fp16.cpp  kk_crs_spmv_cusparse_fp64_fp64.cpp  kk_crs_spmv_native_fp16_fp16.cpp  kk_crs_spmv_native_fp64_fp64.cpp  kk_crs_spmv_tc_fp64_fp64.cpp  kk_dense_cusparse_fp64.cpp  kk_hybrid_spmv_cusparse_cusparse_fp16_fp16.cpp  kk_hybrid_spmv_cusparse_cusparse_fp64_fp64.cpp  kk_hybrid_spmv_tc_cusparse_fp16_fp16.cpp  kk_hybrid_spmv_tc_cusparse_fp64_fp64.cpp  kk_hybrid_spmv_tc_native_fp16_fp16.cpp  kk_hybrid_spmv_tc_native_fp64_fp64.cpp  kk_sparse_cusparse_fp64.cpp  load-env.sh  split.hpp
kokkos-kernels/scripts/perlmutter/: blocks-131072.sh  blocks-524288.sh  blocks-528244.sh  points-block-constant-131072.sh  points-block-constant-524288.sh  points-block-constant-528244.sh  points-block-diagonal-constant-131072.sh  points-block-diagonal-constant-524288.sh  points-block-diagonal-variable-131072-0.sh  points-block-diagonal-variable-131072-1000.sh  points-block-diagonal-variable-524288-0.sh  points-block-diagonal-variable-524288-1000.sh  points-block-variable-131072-0.sh  points-block-variable-131072-1000.sh  points-block-variable-524288-0.sh  points-block-variable-524288-1000.sh
kokkos-kernels/scripts/vortex/: .gitignore  blocks-131072.sh  blocks-524288.sh  blocks.sh  common.sh  points-block-constant-131072.sh  points-block-constant-524288.sh  points-block-constant-hybrid-131072.sh  points-block-constant-hybrid-524288.sh  points-block-constant-hybrid-524336.sh  points-block-constant.sh  points-block-diagonal-constant-131072.sh  points-block-diagonal-constant-524288.sh  points-block-diagonal-constant.sh  points-block-diagonal-variable-0.sh  points-block-diagonal-variable-1000.sh  points-block-diagonal-variable-131072-0.sh  points-block-diagonal-variable-131072-1000.sh  points-block-diagonal-variable-524288-0.sh  points-block-diagonal-variable-524288-1000.sh  points-block-diagonal-variable.sh  points-block-variable-0.sh  points-block-variable-1000.sh  points-block-variable-131072-0.sh  points-block-variable-131072-1000.sh  points-block-variable-524288-0.sh  points-block-variable-524288-1000.sh  points-block-variable.sh  points.sh  run.sh
